crates/nash-codegen/src/build/tests/snapshots/nash_codegen__build__tests__optimizer__recursive_forwarded_parameter.snap
---
source: crates/nash-codegen/src/build/tests/optimizer.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nloop : int -> int -> int\nloop unused n =\n    if Builtin.equalsInteger n 0 then\n        42\n    else\n        loop unused (Builtin.subtractInteger n 1)\nmain : int\nmain = loop (Builtin.trace \"entry\" 7) 3\n"
---
--- unoptimized Core
let message#9 : string = "entry" in
let fromInt#4 : int -> int = \value#8 : int -> value#8 in
letrec
  loop#2 : int -> int -> int [static [0]] = \unused#5 : int n#6 : int -> case@Bool equalsInteger n#6 (fromInt#4 0) of
    True -> fromInt#4 42
    False -> loop#2 unused#5 (subtractInteger n#6 (fromInt#4 1))
in
let fromString#3 : string -> string = \value#7 : string -> value#7 in
let main#1 : int = loop#2 (trace (fromString#3 message#9) (fromInt#4 7)) (fromInt#4 3) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_9
    [(lam fromInt_4
      [(lam loop_2
        [(lam fromString_3
          [(lam main_1 main_1)
            [[loop_2
              [[(force (builtin trace)) [fromString_3 message_9]] [fromInt_4 (con integer 7)]]]
              [fromInt_4 (con integer 3)]]])
          (lam value_7 value_7)])
        (lam unused_5
          (lam n_6
            [[(lam self_10 [self_10 self_10])
              (lam self_10
                (lam n_6
                  (case
                    [[(builtin equalsInteger) n_6] [fromInt_4 (con integer 0)]]
                    [[self_10 self_10]
                      [[(builtin subtractInteger) n_6] [fromInt_4 (con integer 1)]]]
                    [fromInt_4 (con integer 42)])))]
              n_6]))])
      (lam value_8 value_8)])
    (con string "entry")])
--- optimized Core
let arg#21 : int = trace "entry" 7 in
letrec
  worker#20 : int -> int [static []] = \n#19 : int -> let anf#24 : bool = equalsInteger n#19 0 in
  case@Bool anf#24 of
    True -> 42
    False -> let anf#26 : int = subtractInteger n#19 1 in
    worker#20 anf#26
in
worker#20 3
--- optimized UPLC
(program 1.1.0
  [(lam builtin_27
    [(lam arg_21
      [(lam worker_20 [worker_20 (con integer 3)])
        [(lam self_11 [self_11 self_11])
          (lam self_11
            (lam n_19
              [(lam anf_24
                (case
                  anf_24
                  [(lam anf_26 [[self_11 self_11] anf_26])
                    [[(builtin subtractInteger) n_19] (con integer 1)]]
                  (con integer 42)))
                [[(builtin equalsInteger) n_19] (con integer 0)]]))]])
      [[builtin_27 (con string "entry")] (con integer 7)]])
    (force (builtin trace))])
--- result
(con integer 42)
--- logs
["entry"]
